Add check off todo on click feature

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,10 @@
 	margin: 0 auto;
 	text-align: center;
 }
+ul {
+	list-style: none;
+}
+.completed {
+	color: gray;
+	text-decoration: line-through;
+}
