--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+	background: #00B4DB;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(left, #0083B0, #00B4DB);
+	background: -o-linear-gradient(left, #0083B0, #00B4DB);
+	background: linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	font-family: "Roboto";
+}
 #container {
 	max-width: 400px;
 	margin: 0 auto;
