style list heading

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,16 @@ body {
 }
 #container {
 	max-width: 400px;
-	margin: 0 auto;
-	text-align: center;
+	margin: 200px auto;
+}
+h1 {
+	border: 4px solid white;
+	color: white;
+	margin: 0;
+	padding: 10px 20px;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 100%
 }
 ul {
 	list-style: none;
