--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 body {
-	background: #00B4DB;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(left, #0083B0, #00B4DB);
-	background: -o-linear-gradient(left, #0083B0, #00B4DB);
-	background: linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #7F7FD5;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(left, #91EAE4, #86A8E7, #7F7FD5);
+	background: -o-linear-gradient(left, #91EAE4, #86A8E7, #7F7FD5);
+	background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	font-family: "Roboto";
 }
 #container {
-	max-width: 400px;
-	margin: 200px auto;
+	width: 360px;
+	margin: 100px auto;
 }
 h1 {
-	border: 4px solid white;
+	background: #2980b9;
 	color: white;
 	margin: 0;
 	padding: 10px 20px;
@@ -18,6 +18,7 @@ h1 {
 	text-transform: uppercase;
 	line-height: 100%
 }
+
 ul {
 	list-style: none;
 }
