--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ h1 {
 	margin: 0;
 	padding: 10px 20px;
 	font-weight: normal;
+	font-size: 24px;
 	text-transform: uppercase;
 	line-height: 100%
 }
@@ -33,6 +34,21 @@ input[type="text"]:focus {
 }
 ul {
 	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+li {
+	background: white;
+	font-size: 18px;
+	height: 40px;
+	line-height: 20px;
+	width: 100%;
+	padding: 10px 20px;
+	box-sizing: border-box;
+	color: #666;
+}
+li:nth-child(2) {
+	background: #f7f7f7;
 }
 .completed {
 	color: gray;
