--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,8 @@ li {
 	font-size: 18px;
 	height: 40px;
 	line-height: 20px;
-	width: 100%;
+	width: 320px;
 	padding: 10px 20px;
-	box-sizing: border-box;
 	color: #666;
 }
 
@@ -66,6 +65,5 @@ li:nth-child(2) {
 	width: 20px;
 	height: 20px;
 	padding: 8px 10px;
-
 	text-align: center;
 }
