--- a/styles.css
+++ b/styles.css
@@ -60,9 +60,15 @@ li:nth-child(2) {
 li span {
 	background: #e74c3c;
 	color: white;
-	width: 40px;
+	width: 0;
+	opacity: 0;
 	height: 40px;
 	text-align: center;
 	margin-right: 5px;
 	display: inline-block;
+	transition: 0.2s linear;
+}
+li:hover span {
+	width: 40px;
+	opacity: 1;
 }
