--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,18 @@ li:hover span {
 .fa-plus {
 	float: right;
 }
+
+.fa-question-circle {
+	display: block;
+	float: right;
+	color: white;
+	font-size: 30px;
+	margin-top: 100%;
+}
+
+#help {
+	background: white;
+	color: #666;
+	padding: 20px;
+	display: none;
+}
