--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,23 @@ li:hover span {
 	height: 60px;
 	box-sizing: border-box;
 }
+
+footer {
+	width: 100%;
+	height: 40px;
+	color: #2980b9;
+	background: white;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+}
+a {
+	text-decoration: none;
+	color: #2980b9;
+	font-weight: bold;
+	transition: 0.2s linear;
+}
+a:hover {
+	color: #226692;
+}
