--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+html {
+	height: 100%;
+}
 body {
 	background: #7F7FD5;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(left, #91EAE4, #86A8E7, #7F7FD5);
 	background: -o-linear-gradient(left, #91EAE4, #86A8E7, #7F7FD5);
 	background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	font-family: "Roboto";
+	margin: 0;
+	padding: 0;
+	min-height: 100%;
+	display: grid;
+  	grid-template-rows: 1fr auto;
 }
 
 #container {
@@ -109,13 +117,13 @@ li:hover span {
 
 footer {
 	width: 100%;
-	
+	height: 40px;
+	line-height: 10px;
 	color: #2980b9;
 	background: white;
-	position: absolute;
-	left: 0;
-	bottom: 0;
 	text-align: center;
+	grid-row-start: 2;
+  	grid-row-end: 3;
 }
 a {
 	text-decoration: none;
